--- a/wp-content/themes/mytheme/style.css
+++ b/wp-content/themes/mytheme/style.css
@@ -163,14 +163,24 @@ h6 {
     text-decoration: none
 }
 
-.header .nav-item .nav-link {
+.header .nav-item a {
     color: rgba(255, 255, 255, 0.8)
 }
 
-.header .nav-item .nav-link:hover {
+.header .nav-item a:hover {
     text-decoration: underline;
     color: rgba(0, 0, 0, 0.6)
 }
+
+.header .menu-item a {
+    color: rgba(255, 255, 255, 0.8)
+}
+
+.header .menu-item a:hover {
+    text-decoration: underline;
+    color: rgba(0, 0, 0, 0.6)
+}
+
 .logo{
     width:78px;
 }
